# transact

./: LICENSE  Readme.md  pyproject.toml
tests/: decorators_tests.py  job_tests.py  operation_tests.py  orchestrator_tests.py  transaction_tests.py
transact/: decorators.py  job.py  logging_operation.py  logging_transaction.py  operation.py  orchestrator.py  transaction.py
