[build-system]
requires = [
    "setuptools>=61.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "transact"
version = "0.0.1"
authors = [
  { name="Matthias Ruiz", email="hamachermatthias12@gmail.com" },
]
description = "Transactional programming python project"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
